<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.gmail.reebrando.intentsdemo.SignUpActivity">

    <EditText
        android:id="@+id/edUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_user"/>

    <EditText
        android:id="@+id/edName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_name"/>

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_password"
        android:inputType="textPassword"/>


    <EditText
        android:id="@+id/edRPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:background="@drawable/custom_button"/>

</LinearLayout>
